# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("config.gni")
import("//brave/build/cargo.gni")
import("//brave/test/testing.gni")

config("external_config") {
  include_dirs = [ "src" ]
  defines = [
    "NO_CXXEXCEPTIONS=1"
  ]
}

source_set("https-everywhere-lib-cpp") {
  public_configs = [ ":external_config" ]

  sources = [
    "src/wrapper.cpp",
    "src/wrapper.hpp"
  ]

  deps = [
    "//base",
    ":httpse"
  ]

  libs = [ httpse_lib_path ]

  if (is_mac || is_ios ) {
    libs += [
      "Security.framework"
    ]
  }
}

if (httpse_shared_lib_install_name != "") {
  fix_testing_install_name("test_httpse_install_name") {
    current_path = httpse_shared_lib_install_name
    new_path = "@executable_path/" + rebase_path(httpse_lib_path, root_build_dir)
  }
} else {
    group("test_httpse_install_name") {}
}

cargo_build("httpse") {
  inputs = [
    "Cargo.toml",
    "src/lib.h",
    "src/lib.rs",
  ]

  rust_flags = httpse_flags
  output = httpse_lib_path

  manifest_path = "Cargo.toml"

  build_path = httpse_build_path

  target = httpse_target
}
