[package]
name = "https-everywhere-lib-cpp"
version = "0.1.0"
authors = ["Anton Lazarev <alazarev@brave.com>"]
edition = "2018"
description = "HTTPS Everywhere C++ FFI bindings"
license = "MPL-2.0"
repository = "https://github.com/brave/https-everywhere-lib-cpp"
readme = "README.md"

exclude = [ "/data/" ]

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
https-everywhere-lib-core = { git = "https://github.com/EFForg/https-everywhere-lib-core", default_features = false, features = ["rewriter", "potentially_applicable", "add_rulesets"], rev = "8157ca5c804d83d99031f91cfd8e288fda96a8c7" }
serde_json = "1.0"
libc = "0.2"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
